# llm-vertex

./: .gitignore  CLAUDE.md  README.md  llm_vertex.py  pyproject.toml
tests/: test_vertex.py
tests/cassettes/test_vertex/: test_tools_with_gemini_3_thought_signatures.yaml
