[project]
name = "llm-vertex"
version = "0.27.0"
description = "LLM plugin to access Google's Gemini models via Vertex AI"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
dependencies = [
    "llm>=0.27",
    "httpx",
    "requests",
    "ijson",
    "google-auth"
]

[project.urls]
Homepage = "https://github.com/simonw/llm-gemini"
Changelog = "https://github.com/simonw/llm-gemini/releases"
Issues = "https://github.com/simonw/llm-gemini/issues"
CI = "https://github.com/simonw/llm-gemini/actions"

[project.entry-points.llm]
vertex = "llm_vertex"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "pytest-asyncio", "nest-asyncio", "cogapp"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
