[project]
name = "llm-vertex"
version = "0.28.1"
description = "LLM plugin to access Google's Gemini models via Vertex AI"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
dependencies = [
    "llm>=0.27",
    "httpx",
    "ijson",
    "google-auth[requests]"
]

[project.urls]
Homepage = "https://github.com/c0ffee0wl/llm-vertex"
Changelog = "https://github.com/c0ffee0wl/llm-vertex/releases"
Issues = "https://github.com/c0ffee0wl/llm-vertex/issues"
CI = "https://github.com/c0ffee0wl/llm-vertex/actions"

[project.entry-points.llm]
vertex = "llm_vertex"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "pytest-asyncio", "nest-asyncio", "cogapp"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
